Fixed: modals overlaping with each other and the surrounding

--- a/src/components/top-tabs.module.css
+++ b/src/components/top-tabs.module.css
@@ -1,37 +1,40 @@
 .container {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-end;
-  height: 7vh;
+  height: 50px;
   width: 100%;
-  /* background-color: aquamarine; */
 }
 
-.sortContainer {
+.tapButtonContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   border-radius: 5px;
-  margin: 5px;
-  padding: 0px 10px;
+  margin-right: 5px;
   font-size: 12px;
   background-color: rgb(223, 195, 195);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   height: 30px;
   width: 110px;
 }
-.sortContainer :hover {
-  /* background-color: rgb(241, 46, 46); */
-  cursor: pointer;
-  /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5); */
+
+.buttonTextStyle {
+  margin-left: 5px;
 }
 
-.arrowIcon {
+.tapButtonContainer:hover {
+  background-color: rgb(178, 154, 154);
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+.buttonIcontyle {
   width: 16px;
   height: 16px;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 .closeIcon {
   width: 16px;
@@ -44,35 +47,38 @@
   width: 130px;
   background-color: rgb(255, 255, 255);
   position: absolute;
-  top: 22vh;
+  top: 150px;
   border-radius: 5px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px;
+  z-index: 1;
 }
 .sortModalContainer {
   right: 5px;
 }
 .filterModalContainer {
-  right: 145px;
+  right: 100px;
 }
 .tableModalContainer {
-  right: 285px;
+  right: 205px;
 }
 
 .sortOption {
   height: 20px;
-  width: 95%;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   font-size: 12px;
   margin-top: 5px;
+  border-bottom: 1px solid rgb(169, 163, 163);
 }
 
-.sortOption :hover {
+.sortOption:hover {
   background-color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
